--- a/assets/playground.html
+++ b/assets/playground.html
@@ -5,7 +5,7 @@
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     /*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
     margin-top: 36px;
-    padding: 36px 12px;
+    padding: 36px 12px 0 6px;
     background: #fcfcfc;
     z-index: 1000;
   }
@@ -106,8 +106,8 @@
 
   /* Data Details */
   #data-details {
-    width: 100%;
     position: relative;
+    margin-left: 18px;
   }
 
   @media(min-width: 768px) {
