fix simulation logic. fix back button. make hash params specific to a link

--- a/assets/playground.html
+++ b/assets/playground.html
@@ -170,6 +170,7 @@
     </div>
     <div id="data-options"></div>
     <div id="tsne-options"></div>
+    <a id="share" style="display:none;">Link to this simulation</a>
   </div>
 
 
