no restart button

--- a/assets/tray.html
+++ b/assets/tray.html
@@ -103,9 +103,9 @@
         <i class="material-icons">play_arrow</i>
         <i class="material-icons">pause</i>
       </button>
-      <button class="restart">
+      <!-- <button class="restart">
         <i class="material-icons">refresh</i>
-      </button>
+      </button> -->
       <div id="tray-steps-display">
         Step: <br> <span class="step"></span>
       </div>
