Rewriting dt-post

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<script src="http://distill.pub/components.js"></script>
 <dt-header></dt-header>
 <script src="assets/d3.min.js"></script>
 <script src="assets/tsne.js"></script>
@@ -139,7 +138,7 @@ section {
 
 <dt-include src="assets/tray.html"></dt-include>
 
-<dt-post markdown>
+<dt-article markdown>
   <div class="w-page intro">
     <h1>How to Use t-SNE Effectively</h1>
     <h2>Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
@@ -295,7 +294,7 @@ section {
   <!-- bring the figures to life -->
   <dt-include src="assets/tsne-group.html"></dt-include>
 
-</dt-post>
+</dt-article>
 <dt-appendix>
 
   <h3>Acknowledgments</h3>
