--- a/public/index.html
+++ b/public/index.html
@@ -315,3 +315,15 @@ section {
 </dt-appendix>
 
 <dt-footer></dt-footer>
+<script type="text/bibliography">
+@article{maaten2008visualizing,
+  title={Visualizing data using t-SNE},
+  author={Maaten, Laurens van der and Hinton, Geoffrey},
+  journal={Journal of Machine Learning Research},
+  volume={9},
+  number={Nov},
+  pages={2579--2605},
+  year={2008},
+  url={http://www.jmlr.org/papers/volume9/vandermaaten08a/vandermaaten08a.pdf}
+}
+</script>
