--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <meta charset="utf-8">
-<dt-header></dt-header>
+<script type="text/front-matter">
+  title: How to Use t-SNE Effectively
+  description: Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading.
+  authors:
+    - Martin Wattenberg: http://hint.fm/
+    - "Fernanda Viégas": http://hint.fm/
+    - Ian Johnson: http://enjalot.github.io/
+  affiliations:
+    - Google Brain: http://g.co/brain
+    - Google Brain: http://g.co/brain
+    - Google Cloud: http://cloud.google.com
+</script>
+
 <script src="assets/d3.min.js"></script>
 <script src="assets/tsne.js"></script>
 <script src="assets/demo-configs.js"></script>
