--- a/public/assets/playground.html
+++ b/public/assets/playground.html
@@ -6,7 +6,7 @@
     /*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
     margin-top: 36px;
     padding: 36px 0 0 0;
-    background: #fcfcfc;
+    /*background: #fcfcfc;*/
     z-index: 1000;
   }
 
