--- a/public/index.html
+++ b/public/index.html
@@ -125,22 +125,6 @@ input[type=range]:focus::-ms-fill-upper {
   background: rgba(0, 0, 0, 0.1);
 }
 
-
-.intro h2 {
-  font-weight: normal;
-  font-size: 16px;
-}
-@media(min-width: 1024px) {
-  .intro h1 {
-  }
-  .intro h2 {
-    font-size: 21px;
-    max-width: 760px;
-    font-weight: 300;
-    line-height: 1.5em;
-    border-bottom: none!important;
-  }
-}
 section {
   overflow: hidden;
 }
@@ -426,10 +410,8 @@ section {
 </dt-include>
 
 <dt-article>
-  <div class="l-page intro">
-    <h1>How to Use t-SNE Effectively</h1>
-    <h2>Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
-  </div>
+  <h1 class="l-middle">How to Use t-SNE Effectively</h1>
+  <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
   <div class="l-page">
     <dt-include src="assets/playground.html"><style>
   #playground {
