--- a/public/_index.html
+++ b/public/_index.html
@@ -140,7 +140,7 @@ section {
     <dt-include src="assets/playground.html"></dt-include>
   </div>
   <dt-byline></dt-byline>
-  <p>A popular method for exploring high-dimensional data is something called t-SNE, introduced by <a href="https://lvdmaaten.github.io/publications/papers/JMLR_2008.pdf">van der Maaten and Hinton in 2008</a>. The technique has become widespread in the field of machine learning, since it has an almost magical ability to create compelling two-dimensonal "maps" from data with hundreds or even thousands of dimensions.
+  <p>A popular method for exploring high-dimensional data is something called t-SNE, introduced by <dt-cite key="maaten2008visualizing">van der Maaten and Hinton in 2008</dt-cite>. The technique has become widespread in the field of machine learning, since it has an almost magical ability to create compelling two-dimensonal "maps" from data with hundreds or even thousands of dimensions.
 Although impressive, these images can be tempting to misread. The purpose of this note is to prevent some common misreadings.</p>
 
   <p>We'll walk through a series of simple examples to illustrate what t-SNE diagrams can and cannot show. The t-SNE technique really is useful—but only if you know how to interpret it.</p>
@@ -299,14 +299,8 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>Edited on Oct. 18, 2016 to describe and correct issues when perplexity is defined to be larger than the number of points. Thanks to Laurens van der Maaten for pointing this out.</p>
 
-  <h3>References</h3>
-  <ul class="references">
-    <li><a href="https://lvdmaaten.github.io/publications/papers/JMLR_2008.pdf">van der Maaten and Hinton. <b>Visualizing Data using t-SNE.</b> Journal of Machine Learning Research 9 (2008) 2579-2605</a></li>
-  </ul>
-
 </dt-appendix>
 
-<dt-footer></dt-footer>
 <script type="text/bibliography">
 @article{maaten2008visualizing,
   title={Visualizing data using t-SNE},
