--- a/public/index.html
+++ b/public/index.html
@@ -410,7 +410,7 @@ section {
 </dt-include>
 
 <dt-article>
-  <h1 class="l-middle">How to Use t-SNE Effectively</h1>
+  <h1>How to Use t-SNE Effectively</h1>
   <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
   <div class="l-page">
     <dt-include src="assets/playground.html"><style>
@@ -691,7 +691,7 @@ section {
 </dt-include>
   </div>
   <dt-byline></dt-byline>
-  <p>A popular method for exploring high-dimensional data is something called t-SNE, introduced by <a href="https://lvdmaaten.github.io/publications/papers/JMLR_2008.pdf">van der Maaten and Hinton in 2008</a>. The technique has become widespread in the field of machine learning, since it has an almost magical ability to create compelling two-dimensonal "maps" from data with hundreds or even thousands of dimensions.
+  <p>A popular method for exploring high-dimensional data is something called t-SNE, introduced by <dt-cite key="maaten2008visualizing">van der Maaten and Hinton in 2008</dt-cite>. The technique has become widespread in the field of machine learning, since it has an almost magical ability to create compelling two-dimensonal "maps" from data with hundreds or even thousands of dimensions.
 Although impressive, these images can be tempting to misread. The purpose of this note is to prevent some common misreadings.</p>
 
   <p>We'll walk through a series of simple examples to illustrate what t-SNE diagrams can and cannot show. The t-SNE technique really is useful—but only if you know how to interpret it.</p>
@@ -1070,14 +1070,8 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>Edited on Oct. 18, 2016 to describe and correct issues when perplexity is defined to be larger than the number of points. Thanks to Laurens van der Maaten for pointing this out.</p>
 
-  <h3>References</h3>
-  <ul class="references">
-    <li><a href="https://lvdmaaten.github.io/publications/papers/JMLR_2008.pdf">van der Maaten and Hinton. <b>Visualizing Data using t-SNE.</b> Journal of Machine Learning Research 9 (2008) 2579-2605</a></li>
-  </ul>
-
 </dt-appendix>
 
-<dt-footer></dt-footer>
 <script type="text/bibliography">
 @article{maaten2008visualizing,
   title={Visualizing data using t-SNE},
