--- a/public/_index.html
+++ b/public/_index.html
@@ -157,14 +157,14 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>Let's start with the "hello world" of t-SNE: a data set of two widely separated clusters. To make things as simple as possible, we'll consider clusters in a 2D plane, as shown in the lefthand diagram. (For clarity, the two clusters are color coded.) The diagrams at right show t-SNE plots for five different perplexity values.</p>
 
-  <p><section class="l-page tsne-group" id="figures-01" data-id="01">
+  <p><section class="l-page-outset tsne-group" id="figures-01" data-id="01">
   </section></p>
 
   <p>With perplexity values in the range (5 - 50) suggested by van der Maaten &amp; Hinton, the diagrams do show these clusters, although with very different shapes. Outside that range, things get a little weird. With perplexity 2, local variations dominate. The image for perplexity 100, with merged clusters, illustrates a pitfall: for the algorithm to operate property, the perplexity really should be smaller than the number of points. Implementations can give unexpected behavior otherwise.</p>
 
   <p>Each of the plots above was made with 5,000 iterations with a learning rate (often called "epsilon") of 10, and had reached a point of stability by step 5,000. How much of a difference do those values make? In our experience, the most important thing is to iterate until reaching a stable configuration.</p>
 
-  <p><section class="l-page tsne-group" id="figures-02" data-id="02">
+  <p><section class="l-page-outset tsne-group" id="figures-02" data-id="02">
   </section></p>
 
   <p>The images above show five different runs at perplexity 30. The first four were stopped before stability. After 10, 20, 60, and 120 steps you can see layouts with seeming 1-dimensional and even pointlike images of the clusters. If you see a t-SNE plot with strange "pinched" shapes, chances are the process was stopped too early. Unfortunately, there's no fixed number of steps that yields a stable result. Different data sets can require different numbers of iterations to converge.</p>
@@ -179,7 +179,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>So far, so good. But what if the two clusters have different standard deviations, and so different sizes? (By size we mean bounding box measurements, not number of points.) Below are t-SNE plots for a mixture of Gaussians in plane, where one is 10 times as dispersed as the other.</p>
 
-  <p><section class="l-page tsne-group" id="figures-03" data-id="03">
+  <p><section class="l-page-outset tsne-group" id="figures-03" data-id="03">
   </section></p>
 
   <p>Surprisingly, the two clusters look about same size in the t-SNE plots.
@@ -193,7 +193,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>What about distances <em>between</em> clusters? The next diagrams show three Gaussians of 50 points each, one pair being 5 times as far apart as another pair.</p>
 
-  <p><section class="l-page tsne-group" id="figures-04" data-id="04">
+  <p><section class="l-page-outset tsne-group" id="figures-04" data-id="04">
   </section></p>
 
   <p>At perplexity 50, the diagram gives a good sense of the global geometry. For lower perplexity values the clusters look equidistant. When the perplexity is 100, we see the global geometry fine, but one of the cluster appears, falsely, much smaller than the others.
@@ -201,7 +201,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>Sadly, no. If we add more points to each cluster, the perplexity has to increase to compensate. Here are the t-SNE diagrams for three Gaussian clusters with 200 points each, instead of 50. Now none of the trial perplexity values gives a good result.</p>
 
-  <p><section class="l-page tsne-group" id="figures-05" data-id="05">
+  <p><section class="l-page-outset tsne-group" id="figures-05" data-id="05">
   </section></p>
 
   <p>It's bad news that seeing global geometry requires fine-tuning perplexity. Real-world data would probably have multiple clusters with different numbers of elements. There may not be one perplexity value that will capture distances across all clusters—and sadly perplexity is a global parameter. Fixing this problem might be an interesting area for future research.</p>
@@ -215,7 +215,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
   <p>A classic pitfall is thinking you see patterns in what is really just random data. Recognizing noise when you see it is a critical skill, but it takes time to build up the right intuitions. A tricky thing about t-SNE is that it throws a lot of existing intuition out the window.
   The next diagrams show genuinely random data, 500 points drawn from a unit Gaussian distribution in 100 dimensions. The left image is a projection onto the first two coordinates.</p>
 
-  <p><section class="l-page tsne-group" id="figures-06" data-id="06">
+  <p><section class="l-page-outset tsne-group" id="figures-06" data-id="06">
   </section></p>
 
   <p>The plot with perplexity 2 seems to show dramatic clusters. If you were tuning perplexity to bring out structure in the data, you might think you'd hit the jackpot.</p>
@@ -230,12 +230,12 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>It's rare for data to be distributed in a perfectly symmetric way. Let's take a look at an axis-aligned Gaussian distribution in 50 dimensions, where the standard deviation in coordinate i is 1/i. That is, we're looking at a long-ish ellipsoidal cloud of points.</p>
 
-  <p><section class="l-page tsne-group" id="figures-07" data-id="07">
+  <p><section class="l-page-outset tsne-group" id="figures-07" data-id="07">
   </section></p>
 
   <p>For high enough perplexity values, the elongated shapes are easy to read. On the other hand, at low perplexity, local effects and meaningless "clumping" take center stage. More extreme shapes also come through, but again only at the right perplexity. For example, here are two clusters of 75 points each in 2D, arranged in parallel lines with a bit of noise.</p>
 
-  <p><section class="l-page tsne-group" id="figures-08" data-id="08">
+  <p><section class="l-page-outset tsne-group" id="figures-08" data-id="08">
   </section></p>
 
   <p>For a certain range of perplexity the long clusters look close to correct, which is reassuring.</p>
@@ -249,7 +249,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
   <p>Sometimes you can read topological information off a t-SNE plot, but that typically requires views at multiple perplexities.
   One of the simplest topological properties is containment. The plots below show two groups of 75 points in 50 dimensional space. Both are sampled from symmetric Gaussian distributions centered at the origin, but one is 50 times more tightly dispersed than the other. The "small" distribution is in effect contained in the large one.</p>
 
-  <p><section class="l-page tsne-group" id="figures-09" data-id="09">
+  <p><section class="l-page-outset tsne-group" id="figures-09" data-id="09">
   </section></p>
 
   <p>The perplexity 30 view shows the basic topology correctly, but again t-SNE greatly exaggerates the size of the smaller group of points. At perplexity 50, there's a new phenomenon: the outer group becomes a circle, as the plot tries to depict the fact that all its points are about the same distance from the inner group. If you looked at this image alone, it would be easy to misread these outer points as a one-dimensional structure.</p>
@@ -258,21 +258,21 @@ Although impressive, these images can be tempting to misread. The purpose of thi
 
   <p>Consider a set of points that trace a link or a knot in three dimensions. Once again, looking at multiple perplexity values gives the most complete picture. Low perplexity values give two completely separate loops; high ones show a kind of global connectivity.</p>
 
-  <p><section class="l-page tsne-group" id="figures-10" data-id="10">
+  <p><section class="l-page-outset tsne-group" id="figures-10" data-id="10">
   </section>
-  <section class="l-page tsne-group" id="figures-11" data-id="11">
+  <section class="l-page-outset tsne-group" id="figures-11" data-id="11">
   </section></p>
 
   <p>The trefoil knot is an interesting example of how multiple runs affect the outcome of t-SNE. Below are five runs of the perplexity-2 view.</p>
 
   <p>The algorithm settles twice on a circle, which at least preserves the intrinsic topology. But in three of the runs it ends up with three different solutions which introduce artificial breaks. Using the dot color as a guide, you can see that the first and third runs are far from each other.</p>
 
-  <p><section class="l-page tsne-group" id="figures-12" data-id="12">
+  <p><section class="l-page-outset tsne-group" id="figures-12" data-id="12">
   </section></p>
 
   <p>Five runs at perplexity 50, however, give results that (up to symmetry) are visually identical. Evidently some problems are easier than others to optimize.</p>
 
-  <p><section class="l-page tsne-group" id="figures-13" data-id="13">
+  <p><section class="l-page-outset tsne-group" id="figures-13" data-id="13">
   </section></p>
 
   <hr />
