--- a/public/_index.html
+++ b/public/_index.html
@@ -134,7 +134,7 @@ section {
 <dt-include src="assets/tray.html"></dt-include>
 
 <dt-article>
-  <h1>How to Use t-SNE Effectively</h1>
+  <h1 class="l-middle">How to Use t-SNE Effectively</h1>
   <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
   <div class="l-page">
     <dt-include src="assets/playground.html"></dt-include>
