--- a/public/_index.html
+++ b/public/_index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="material-icons.css" rel="stylesheet">
 <script type="text/front-matter">
   title: How to Use t-SNE Effectively
   description: Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading.
