"can we can" -> "can we"
Fix typo pointed out by @rahulbhalley in #7.

"can we can" -> "can we"

--- a/public/_index.html
+++ b/public/_index.html
@@ -193,7 +193,7 @@ Although impressive, these images can be tempting to misread. The purpose of thi
   </div>
 
   <p>At perplexity 50, the diagram gives a good sense of the global geometry. For lower perplexity values the clusters look equidistant. When the perplexity is 100, we see the global geometry fine, but one of the cluster appears, falsely, much smaller than the others.
-  Since perplexity 50 gave us a good picture in this example, can we can always set perplexity to 50 if we want to see global geometry?</p>
+  Since perplexity 50 gave us a good picture in this example, can we always set perplexity to 50 if we want to see global geometry?</p>
 
   <p>Sadly, no. If we add more points to each cluster, the perplexity has to increase to compensate. Here are the t-SNE diagrams for three Gaussian clusters with 200 points each, instead of 50. Now none of the trial perplexity values gives a good result.</p>
 
