"it" was referring to "t-SNE plots", fixing reference.

--- a/public/_index.html
+++ b/public/_index.html
@@ -131,7 +131,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 <dt-article>
   <h1 class="l-middle">How to Use t-SNE Effectively</h1>
-  <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how it behaves in simple cases, we can learn to use it more effectively.</h2>
+  <h2 class="l-middle">Although extremely useful for visualizing high-dimensional data, t-SNE plots can sometimes be mysterious or misleading. By exploring how t-SNE behaves in simple cases, we can learn to use it more effectively.</h2>
   <div class="l-page">
     <dt-include src="assets/playground.html"></dt-include>
   </div>
